<resources>
    <string name="app_name">Ciniplexis</string>
    <string name="popular">Popularity</string>
    <string name="rating">Rating</string>
    <string name="in_theatres">In Theatres</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="date">Date</string>
    <string name="greeting_txt">Welcome</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="admission_location">Admissions &amp; Locations</string>
    <string name="favorites">Favorites</string>
    <string name="movies">Movies</string>
    <string name="news">News</string>
    <string name="national_theatre">National Theatre &amp; Opera</string>
    <string name="specials">Specials</string>
    <string name="concession">Concession</string>
    <string name="purchased">Purchased</string>
    <string name="search">Search</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="ref_tickets">Refund Tickets</string>
    <string name="add_fav">Add to Favorites</string>
    <string name="rem_fav">Remove From Favorites</string>
    <string name="net_unavailable">Network Unavailable</string>
    <string name="net_data_failed">Failed to fetch additional data</string>
    <string name="ticket_cost_lbl">Cost:</string>
    <string name="release_date_lbl">Released:</string>
    <string name="loading_image">loading image&#8230;</string>
    <string name="loading_title">loading title&#8230;</string>
    <string name="dummy_trailer_name">Trailer 1</string>
    <string name="dummy_trailer_description">720p Trailer</string>
    <string name="dummy_author">Ravi Diharrie</string>
    <string name="dummy_comment">This movies showed scenes that depicted many key features of humans and gave great insight into there psyche..</string>
    <string name="dummy_title">World of Kors</string>
    <string name="dummy_date">12/10/2015</string>
    <string name="dummy_rating">3.5</string>
    <string name="dummy_rating_val">(3.5)</string>
    <string name="dummy_price">$0.00</string>
    <string name="dummy_plot">Once upon a time when the sky and earth were one and the same</string>
    <string name="review_unavailable">Review Unavailable</string>
    <string name="review_tab">Reviews</string>
    <string name="trailer_unavailable">Trailer Unavailable</string>
    <string name="trailer_tab">Trailers</string>
    <string name="share">Share</string>
    <string name="sort_favorite">Sort By Favorites</string>
    <string name="sort_popularity">Sort By Popularity</string>
    <string name="sort_rating">Sort By Rating</string>
    <string name="now_showing">In Theatre</string>
    <string name="coming_soon_lbl">Coming Soon</string>
</resources>
