<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="collapseActionView|ifRoom" />

        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_action_favorite"
            android:title="@string/sort_favorite"
            app:showAsAction="never" />

        <item
            android:id="@+id/popularity"
            android:title="@string/sort_popularity"
            app:showAsAction="never" />

        <item
            android:id="@+id/rating"
            android:title="@string/sort_rating"
            app:showAsAction="never" />

        <item
            android:id="@+id/now_showing"
            android:title="@string/now_showing"
            app:showAsAction="never" />

        <item
            android:id="@+id/coming_soon"
            android:title="@string/coming_soon_lbl"
            app:showAsAction="never" />
    </group>
</menu>