<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_bg_repeat">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="4dp"
            app:cardBackgroundColor="@color/colorPrimaryLight">


            <LinearLayout
                android:id="@+id/details_content_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/movie_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:minHeight="200dp" />


                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/dummy_title"
                    android:textColor="@color/primaryText"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <RatingBar
                        android:id="@+id/rating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:gravity="start"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="@string/dummy_rating" />

                    <TextView
                        android:id="@+id/rating_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/rating"
                        android:layout_toRightOf="@id/rating"
                        android:text="@string/dummy_rating_val" />


                    <TextView
                        android:id="@+id/release_date_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_toLeftOf="@+id/release_date"
                        android:layout_toStartOf="@+id/release_date"
                        android:text="@string/release_date_lbl"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:text="@string/dummy_date"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/price_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/release_date"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_toLeftOf="@+id/price"
                        android:layout_toStartOf="@+id/price"
                        android:text="@string/ticket_cost_lbl"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/release_date"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:text="@string/dummy_price"
                        android:textStyle="bold|italic" />


                </RelativeLayout>

                <TextView
                    android:id="@+id/plot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/dummy_plot"
                    android:textColor="@color/secondaryText" />


            </LinearLayout>


        </android.support.v7.widget.CardView>


    </android.support.v4.widget.NestedScrollView>


    <com.github.clans.fab.FloatingActionMenu xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/movie_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_labels_cornerRadius="3dp"
        app:menu_openDirection="up">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/buy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_money"
            app:fab_label="Buy Ticket" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/mark_fav_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_important"
            app:fab_label="Add Favorite" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>