<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="160dp"
    android:layout_height="240dp"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:elevation="@dimen/cardview_default_elevation"
    app:cardBackgroundColor="@color/movie_card_bg">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/loading_image"
                android:maxHeight="170dp"
                android:minHeight="170dp"
                android:src="@drawable/ic_video_camera_icon" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/loading_title"
                android:textColor="@color/primaryText" />

            <!--<TextView
                android:id="@+id/plot"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"/>-->

            <View
                android:id="@+id/title_bar_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:gravity="start"
                    android:isIndicator="true"
                    android:numStars="1"
                    android:rating="@string/dummy_rating" />

                <TextView
                    android:id="@+id/rating_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_rating_val" />


                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginStart="4dp"
                    android:gravity="end"
                    android:text="@string/dummy_date"
                    android:textColor="@color/secondaryText" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>





